add app manifest

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="jquery.js"></script>
     <script src="App.js" type="module"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
