add icon and card number tracker

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <script src="App.js" type="module"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="icon192.png" type="image/png">
 </head>
 
 <body>
+    <div class="container"><div id="hand_size"></div></div>
     <div id="player_hand"></div>
     <div class="container">
         <div id="discard_button" onclick="discardCard()">Play Discard</div>
