--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hide and Seek Cards</title>
+    <script src="jquery.js"></script>
     <script src="components/Card.js" type="module"></script>
     <script src="components/Hand.js" type="module"></script>
     <script src="Constructors.js" type="module"></script>
+    <script type="module" src="DextrousParser.js"></script>
     <script src="deck.json" type="application/json"></script>
-    <script src="jquery.js"></script>
     <script src="App.js" type="module"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
