--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="components/Card.js" type="module"></script>
     <script src="components/Hand.js" type="module"></script>
     <script src="Constructors.js" type="module"></script>
+    <script src="jszip.min.js"></script>
+    <script src="html5-qrcode.min.js"></script>
+    <script src="peerjs.min.js"></script>
+    <script src="qrcode.min.js"></script>
     <script type="module" src="DextrousParser.js"></script>
     <script src="deck.json" type="application/json"></script>
     <script src="App.js" type="module"></script>
@@ -37,7 +41,7 @@
             <div class="option" onclick="selectOption(this)">1</div>
             <div class="option" onclick="selectOption(this)">2</div>
         </div>
-        <div class="container"><div class="draw_button" onclick="drawCards()">Draw</div></div>
+        <div class="container"><div class="button" onclick="drawCards()">Draw</div></div>
         
 
     </div></div>
@@ -46,17 +50,39 @@
         </div>
     <div id="draw_market"></div>
     <div id="focus_background" onclick="unfocus()"></div>
-    <div class="container" id="settings_box">
-        <div class="draw_button" onclick="openSettings()">Import</div>
+    <div class="full_container" id="settings_box">
+        
         <div id="settings">
+            <label for="card_import">Import type:</label>
             <select id="card_import" onchange="importChange()">
-                <option value="Dextrous">Dextrous</option>
+                <option value=""></option>
+                <!-- <option value="Dextrous">Dextrous</option> -->
                 <option value="Image">Image</option>
             </select>
-            <div id="file_upload">Pick File
+            <label for="fu_box" id="file_upload_button"></label>
+            <div id="file_upload">
             </div>
+            <div class="button" id="import_button" onclick="importCards()">Import</div>
         </div>
     </div>
+    <div class="full_container" id="join_box">
+        <div id="reader_wrapper">
+            <h3>Scan the host's QR Code to join</h3>
+        <div id="reader"></div>
+        </div>
+    </div>
+
+    <div class="full_container" id="landing_page">
+        <h1>Welcome to Fumble</h1>
+        <h2>A tool for prototyping and testing cards</h2>
+        <div id="landing_options">
+            <div id="host_button" class="button" onclick="hostDeck()">Host</div>
+            <div id="join_button" class="button" onclick="joinDeck()">Join</div>
+        </div>
+    </div>
+    <div class="qrcode_container"><span id="qr_heading">Scan to Join</span><div id="qrcode"></div></div>
+    <div id="exit_button" onclick="closeDeck()">Close Deck</div>
+    <div id="qr_button" onclick="hideShowQR()">Hide QR</div>
 </body>
 
 </html>
