--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="html5-qrcode.min.js"></script>
     <script src="peerjs.min.js"></script>
     <script src="qrcode.min.js"></script>
+    <script src="csv.js"></script>
     <script type="module" src="DextrousParser.js"></script>
     <script src="deck.json" type="application/json"></script>
     <script src="App.js" type="module"></script>
@@ -56,12 +57,13 @@
             <label for="card_import">Import type:</label>
             <select id="card_import" onchange="importChange()">
                 <option value=""></option>
-                <!-- <option value="Dextrous">Dextrous</option> -->
+                <option value="Dextrous">Dextrous</option>
                 <option value="Image">Image</option>
             </select>
             <label for="fu_box" id="file_upload_button"></label>
             <div id="file_upload">
             </div>
+            <div id="file_upload2"></div>
             <div class="button" id="import_button" onclick="importCards()">Import</div>
         </div>
     </div>
