added some error handling

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <label for="fu_box" id="file_upload_button"></label>
             <div id="file_upload">
             </div>
+            <div id="fu_error_warning"></div>
             <div id="file_upload2"></div>
             <div class="button" id="import_button" onclick="importCards()">Import</div>
         </div>
