--- a/index.html
+++ b/index.html
@@ -71,16 +71,20 @@
         <div id="reader_wrapper">
             <h3>Scan the host's QR Code to join</h3>
         <div id="reader"></div>
+        <h4>Or, type the ID manually:</h4>
+        <div id="join_id_input"><input type="text" name="ID_Input" id="id_input">
+        <button onclick="manualJoin()">Join</button></div>
         </div>
     </div>
 
     <div class="full_container" id="landing_page">
-        <h1>Welcome to Fumble</h1>
+        <h1>Fumble</h1>
         <h2>A tool for prototyping and testing cards</h2>
         <div id="landing_options">
             <div id="host_button" class="button" onclick="hostDeck()">Host</div>
             <div id="join_button" class="button" onclick="joinDeck()">Join</div>
         </div>
+        <div id="instructions"><br>Press Host to open a deck (.zip file of images of cards, these can be exported from Dextrous) and share it with others, press Join to join a game hosted by someone else.</div>
     </div>
     <div class="qrcode_container"><span id="qr_heading">Scan to Join</span><div id="qrcode"></div></div>
     <div id="exit_button" onclick="closeDeck()">Close Deck</div>
